--- a/MyApplication/app/src/main/res/layout/activity_hover.xml
+++ b/MyApplication/app/src/main/res/layout/activity_hover.xml
@@ -1,4 +1,4 @@
-<com.ctrip.zhshan.myapplication.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ctrip.zhshan.myapplication.oldSolution.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_hover"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,39 +10,41 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/other"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:gravity="center"
-            android:id="@+id/other"
-            android:text="其他部分" />
+            android:text="其他部分(点我跳转到新的activity)"
+            android:textColor="#f00"
+            android:textSize="30dp" />
 
         <LinearLayout
-            android:tag="aaa"
+            android:id="@+id/head_bar_linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#AAff0000"
             android:orientation="horizontal"
-            android:id="@+id/head_bar_linear">
-            
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:text="周边跟团"
-                android:background="#ffffff"
-                android:textSize="15sp"
-                android:id="@+id/click"
-                android:textColor="#000000"
-                android:gravity="center"/>
+            android:tag="aaa">
 
             <TextView
+                android:id="@+id/click"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:text="跳"
                 android:background="#ffffff"
-                android:textSize="15sp"
-                android:id="@+id/click_to"
+                android:gravity="center"
+                android:text="周边跟团"
                 android:textColor="#000000"
-                android:gravity="center"/>
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/click_to"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:background="#ffffff"
+                android:gravity="center"
+                android:text="跳"
+                android:textColor="#000000"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
@@ -56,5 +58,5 @@
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
-</com.ctrip.zhshan.myapplication.MyScrollView>
+</com.ctrip.zhshan.myapplication.oldSolution.MyScrollView>
 
